<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".actualizar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <Button
                android:id="@+id/btnGuardarA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF9C4"
                android:onClick="btnGuardarAOnClick"
                android:text="@string/btnGuardar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTitulo"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/txtTituloA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDescripcion"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/txtDescripcionA"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <RadioGroup
                android:id="@+id/rdgTipoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rdNotaA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rdNota" />

                <RadioButton
                    android:id="@+id/rdTareaA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rdTarea" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/lnrRecordatoriaA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnAgregarAlarmaA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFF9C4"
                    android:onClick="setTerminar"
                    android:text="@string/terminacion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/lblRecordatorioA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFF9C4"
                    android:onClick="addRecordatorio"
                    android:text="@string/agregarRecordatorio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnVerRecordatoriosAA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFF9C4"
                    android:onClick="btnVerRecordatoriosAA"

                    android:text="@string/verRecordatorios"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblArchivos"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />

            </LinearLayout>

            <Button
                android:id="@+id/btnArchivos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF9C4"
                android:onClick="btnArchivosAOnClick"
                android:text="@string/btnArchivos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:text="@string/btnArchivos" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcclcArchivoListaA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>